--- a/Css.css
+++ b/Css.css
@@ -75,6 +75,24 @@ body {
 
 /* End of dropdown code */
 
+#url-Bar-Index{
+    width: 400px;
+    
+}
+
+.url-Enter-Div-Index{
+    text-align: center;
+    
+}
+
+#body-Div{
+    
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 3%;
+    background-color:rgb(0, 2, 26);
+}
+
 #my-Header {
     color: rgb(8, 247, 8);
     text-align: center;
@@ -107,7 +125,7 @@ body {
 #about-Icons{
     background-color: gold;
     border-radius: 50%;
-    margin-left: 45%;
+    margin-left: 17%;
 
 }
 
@@ -116,6 +134,13 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 30%;
+}
+
+#news-Img-Smaller{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
 }
 
 #html-Code-Home{
@@ -144,6 +169,25 @@ body {
     
 }
 
+#pulsate-Text{
+    width: 200px;
+  height: 100%;
+  animation: pulse 5s infinite;
+  
+}
+@keyframes pulse {
+  0% {
+    color: orange;
+  }
+  50%{
+    opacity: 0;
+  }
+  100% {
+    color: orange;
+  }
+}
+
+
 .mid-Row{
     margin-top: 1%;
     height: 50px;
@@ -152,11 +196,86 @@ body {
     background-color: #333;
 }
 
-#body-Div{
-   margin: 3%;
-   background-color:rgb(0, 2, 26);
+.mid-Row-Small{
+    margin-top: 1%;
+    height: 2px;
+    width: 100%;
+    color: #333;
+    background-color: #333;
 }
 
+
+/* SILK ROAD */
+#body-Div-Silk{
+    background-color: #ffffff;
+    margin: 2%;
+    
+}
+
+#header-Silk{
+    text-align: left;
+    
+
+}
+
+#silk-Img{
+    width: 60px;
+}
+
+.container-Img-Text {
+    display: grid;
+    grid-template-columns: 1fr 17fr;
+    
+}
+   
+.silk-Img-Text {
+    font-size: 20px;
+
+}
+
+#search-Bar-Silk{
+   left: 50%;
+
+}
+
+.search-Div-Silk{
+    text-align: center;
+
+}
+
+.link-Text-Silk{
+    outline: auto;
+    text-align: center;
+    outline-style: auto;
+    
+    
+}
+
+
+.post-Silk-Div{
+    outline-style: auto;
+    width: fit-content;
+    background-color: rgb(185, 185, 185);
+    
+
+}
+
+.post-Silk-Img{
+    width: 35%;
+    
+}
+
+#url-Bar-Silk{
+    width: 400px;
+    
+}
+
+.url-Enter-Div-Silk{
+    text-align: center
+
+}
+
+/* SILK ROAD */
 
 
 
